--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <!-- Meta description -->
     <meta
       name="description"
-      content=""
+      content="The Khnami Center provides palliative care to the elderly and adult population of Yerevan and the surrounding regions."
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- CSS -->
@@ -68,7 +68,7 @@
     <main>
       <!-- HERO SECTION -->
       <section class="section-hero">
-        <div class="hero container--large grid grid--2-cols centered--vertically">
+        <div class="hero container grid grid--2-cols centered--vertically">
           <!-- hero text -->
           <div class="hero-text-box grid">
             <!-- hero headline -->
@@ -83,6 +83,17 @@
           </div>
         </div>
       </section>
+      <!-- Cooperations SECTION -->
+      <section class="section-cooperations">
+        <div class="cooperations container">
+          <p>We cooperate with</p>
+          <div class="coop-logo-box flex--centered-vertically">
+            <img class="coop-logo-img" src="./assets/content/images/UNFPA_logo.png" alt="UNFPA Logo">
+            <img class="coop-logo-img" src="./assets/content/images/ACA_logo.png" alt="ACA Logo">
+            <img class="coop-logo-img" src="./assets/content/images/FriendsHome_logo.png" alt="Friends Home Logo">
+            <img class="coop-logo-img" src="./assets/content/images/Promtest_logo.png" alt="Promtest Laboratories Logo">
+          </div>
+        </div>
       <!-- OUR SERVICES SECTION -->
       <section class="section-our-services">
     </main>
