--- a/src/index.html
+++ b/src/index.html
@@ -120,7 +120,7 @@
     <!-- MAIN -->
     <main>
       <!-- HERO SECTION -->
-      <section class="section-hero">
+      <section class="section-hero padding--section">
         <div class="hero container grid grid--2-cols centered--vertically">
           <!-- hero text -->
           <div class="hero-text-box grid">
@@ -148,7 +148,7 @@
         </div>
       </section>
       <!-- COOPERATIONS SECTION -->
-      <section class="section-cooperations">
+      <section class="section-cooperations padding--section">
         <div class="cooperations container">
           <!-- cooperations headline -->
           <p>We cooperate with</p>
@@ -178,7 +178,7 @@
         </div>
       </section>
       <!-- SERVICES SECTION -->
-      <section class="section-services" id="section_services">
+      <section class="section-services padding--section" id="section_services">
         <!-- services headline -->
         <div class="container services-headline padding-bot-lg1">
           <h2 class="heading-secondary">Services</h2>
@@ -332,7 +332,7 @@
         </div>
       </section>
       <!-- GALLERY -->
-      <section class="section-gallery" id="section_gallery">
+      <section class="section-gallery padding--section" id="section_gallery">
         <!-- gallery headline -->
         <div class="container gallery-headline padding-bot-lg1">
           <h2 class="heading-secondary">Gallery</h2>
@@ -375,14 +375,80 @@
                 class="gallery-nav-icon"
               ></ion-icon>
             </li>
+            <li class="gallery-nav-bullet" id="gallery_bullet_4">
+              <ion-icon
+                name="ellipse-outline"
+                class="gallery-nav-icon"
+              ></ion-icon>
+            </li>
           </ul>
         </nav>
+        <!-- testimonials container -->
+        <div class="testimonials container grid grid--2-cols">
+          <div class="testimonial-box">
+            <img
+              src="./assets/content/images/customer sirush.jpg"
+              alt="Customer Face"
+              class="testimonial-img"
+            />
+            <p class="testimonial-text">
+              Professional staff, caring attitude. You are doing very important
+              work to improve the quality of life of patients. Thank you!
+            </p>
+            <span class="testimonial-author">&dash; Sirush Apresyan</span>
+          </div>
+          <div class="testimonial-box">
+            <img
+              src="./assets/content/images/customer Ashot.jpg"
+              alt="Customer Face"
+              class="testimonial-img"
+            />
+            <p class="testimonial-text">
+              I would like to express my gratitude to the team at Khnami
+              Center.They have a wonderful, caring and a professional service.
+            </p>
+            <span class="testimonial-author">&dash; Ashot Enokyan</span>
+          </div>
+          <div class="testimonial-box">
+            <img
+              src="./assets/content/images/customer Irina.jpg"
+              alt="Customer Face"
+              class="testimonial-img"
+            />
+            <p class="testimonial-text">
+              My immense gratitude to the entire staff of the Khnami Center for
+              your work and professionalism. Thanks to you, I have returned to
+              normal life.
+            </p>
+            <span class="testimonial-author">&dash; Irina Kaz</span>
+          </div>
+          <div class="testimonial-box">
+            <img
+              src="./assets/content/images/customer Anahit.jpg"
+              alt="Customer Face"
+              class="testimonial-img"
+            />
+            <p class="testimonial-text">
+              Thank you very much for your caring attitude and professional
+              approach! A special thanks to the director Mrs. Dianna for her
+              personal attitude.
+            </p>
+            <span class="testimonial-author">&dash; Anahit Aghababyan</span>
+          </div>
+        </div>
       </section>
       <!-- STAFF -->
-      <section class="section-staff" id="section_staff">
+      <section class="section-staff padding--section" id="section_staff">
         <!-- staff headline -->
         <div class="container staff-headline padding-bot-lg1">
           <h2 class="heading-secondary">Staff</h2>
+        </div>
+      </section>
+      <!-- CTA -->
+      <section class="section-cta" id="section_cta">
+        <!-- cta headline -->
+        <div class="container cta-headline padding-bot-lg1">
+          <h2 class="heading-secondary">CTA</h2>
         </div>
       </section>
     </main>
