Added Team Section

--- a/src/index.html
+++ b/src/index.html
@@ -63,7 +63,8 @@
   </head>
   <body>
     <!-- HEADER -->
-    <header class="header flex--centered-vertically">
+    <div class="header-background"></div>
+    <header class="header container flex--centered-vertically">
       <!-- Header Navigation -->
       <nav class="header-nav flex--centered-vertically">
         <!-- logo link -->
@@ -82,8 +83,8 @@
         <a href="#section_gallery" class="btn header-link header-link--gallery"
           >Gallery</a
         >
-        <a href="#section_staff" class="btn header-link header-link--staff"
-          >Staff</a
+        <a href="#section_team" class="btn header-link header-link--team"
+          >Team</a
         >
         <a href="#" class="btn header-link header-link--contact">Contact</a>
       </nav>
@@ -156,22 +157,22 @@
           <div class="coop-logo-box flex--centered-vertically">
             <img
               class="coop-logo-img"
-              src="./assets/content/images/UNFPA_logo.png"
+              src="./assets/content/images/cooperations/UNFPA_logo.png"
               alt="UNFPA Logo"
             />
             <img
               class="coop-logo-img"
-              src="./assets/content/images/ACA_logo.png"
+              src="./assets/content/images/cooperations/ACA_logo.png"
               alt="ACA Logo"
             />
             <img
               class="coop-logo-img"
-              src="./assets/content/images/FriendsHome_logo.png"
+              src="./assets/content/images/cooperations/FriendsHome_logo.png"
               alt="Friends Home Logo"
             />
             <img
               class="coop-logo-img"
-              src="./assets/content/images/Promtest_logo.png"
+              src="./assets/content/images/cooperations/Promtest_logo.png"
               alt="Promtest Laboratories Logo"
             />
           </div>
@@ -387,7 +388,7 @@
         <div class="testimonials container grid grid--2-cols">
           <div class="testimonial-box">
             <img
-              src="./assets/content/images/customer sirush.jpg"
+              src="./assets/content/images/customers/customer sirush.jpg"
               alt="Customer Face"
               class="testimonial-img"
             />
@@ -399,7 +400,7 @@
           </div>
           <div class="testimonial-box">
             <img
-              src="./assets/content/images/customer Ashot.jpg"
+              src="./assets/content/images/customers/customer Ashot.jpg"
               alt="Customer Face"
               class="testimonial-img"
             />
@@ -411,7 +412,7 @@
           </div>
           <div class="testimonial-box">
             <img
-              src="./assets/content/images/customer Irina.jpg"
+              src="./assets/content/images/customers/customer Irina.jpg"
               alt="Customer Face"
               class="testimonial-img"
             />
@@ -424,7 +425,7 @@
           </div>
           <div class="testimonial-box">
             <img
-              src="./assets/content/images/customer Anahit.jpg"
+              src="./assets/content/images/customers/customer Anahit.jpg"
               alt="Customer Face"
               class="testimonial-img"
             />
@@ -437,11 +438,31 @@
           </div>
         </div>
       </section>
-      <!-- STAFF -->
-      <section class="section-staff padding--section" id="section_staff">
-        <!-- staff headline -->
-        <div class="container staff-headline padding-bot-lg1">
-          <h2 class="heading-secondary">Staff</h2>
+      <!-- TEAM -->
+      <section class="section-team padding--section" id="section_team">
+        <!-- team headline -->
+        <div class="container team-headline padding-bot-lg1">
+          <h2 class="heading-secondary">Our team</h2>
+        </div>
+        <div class="container grid--team">
+          <div class="team-member-box">
+            <img
+              src="./assets/content/images/team/1BeglaryanD.jpg"
+              alt="Team Members: Head Of The Center"
+              class="team-member-img"
+            />
+            <p class="team-member-name">Diana Beglaryan</p>
+            <p class="team-member-title">Head of the center</p>
+          </div>
+          <div class="member-box">2</div>
+          <div class="member-box">3</div>
+          <div class="member-box">4</div>
+          <div class="member-box">5</div>
+          <div class="member-box">6</div>
+          <div class="member-box">7</div>
+          <div class="member-box">8</div>
+          <div class="member-box">9</div>
+          <div class="member-box">10</div>
         </div>
       </section>
       <!-- CTA -->
